[project]
name = "product-recsys"
version = "0.1.0"
description = "Product recommendation system using Word2Vec embeddings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.2.2",
    "flask-cors>=3.0.0",
    "gensim>=4.2.0",
    "joblib>=1.2.0",
    "numpy>=1.23.4",
    "pandas>=1.5.1",
    "scikit-learn>=1.1.3",
    "gunicorn>=20.1.0",
    "requests>=2.28.1",
    "kaggle>=1.5.12",
]
